[tool.poetry]
name = "nautobot-circuit-maintenance"
version = "1.0.0"
description = "Nautobot plugin to automatically handle Circuit Maintenances Notifications"
authors = ["Network to Code, LLC <opensource@networktocode.com>"]

license = "Apache-2.0"

readme = "README.md"
homepage = "https://github.com/nautobot/nautobot-plugin-circuit-maintenance"
repository = "https://github.com/nautobot/nautobot-plugin-circuit-maintenance"
keywords = ["nautobot", "nautobot-plugin"]
include = [
    "LICENSE",
    "README.md",
]
packages = [
    { include = "nautobot_circuit_maintenance" },
]

[[tool.poetry.source]]
name = "pypi-legacy"
url = "https://pypi.org/simple/"
secondary = true

[tool.poetry.dependencies]
python = "^3.8"
nautobot = "^1.4.0"
nautobot-capacity-metrics = {version = "*", optional = true }
bs4 = "^0.0.1"
circuit-maintenance-parser = "^2.0.0"
google-api-python-client = "^2.9.0"
google-oauth = { version = "^1.0.0", source = "pypi-legacy" }
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.0"
# Added due an issue with Markdown 3.3.5
markdown = "!=3.3.5"

[tool.poetry.dev-dependencies]
invoke = "*"
# Black 23.x.x configuration changes and migration files are taken into account
black = "^22.6.0"
django-debug-toolbar = "*"
yamllint = "*"
bandit = "*"
pylint = "*"
pylint-django = "*"
pydocstyle = "*"
flake8 = "*"
parameterized = "*"
mysqlclient = "*"
# Rendering docs to HTML
mkdocs = "1.3.1"
# Material for MkDocs theme
mkdocs-material = "8.4.2"
# Render custom markdown for version added/changed/remove notes
mkdocs-version-annotations = "1.0.0"
# Automatic documentation from sources, for MkDocs
mkdocstrings = "0.19"
mkdocstrings-python = "0.7.1"


[tool.poetry.extras]
metrics = ["nautobot-capacity-metrics"]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.pylint.master]
# Include the pylint_django plugin to avoid spurious warnings about Django patterns
load-plugins="pylint_django"

# Don't cache data for later comparisons
persistent="no"

# Don't raise alarms if args/kwargs has an issue, as may be required, just as a decorator
ignored-argument-names="args|kwargs"

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    bad-continuation,
    too-few-public-methods,
    duplicate-code,
    too-many-ancestors,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
adopts = "-vv"

[tool.towncrier]
package = "nautobot_chatops"
directory = "changes"
filename = "docs/admin/release_notes/version_1.11.md"
template = "development/towncrier_template.j2"
start_string = "<!-- towncrier release notes start -->"
issue_format = "[#{issue}](https://github.com/nautobot/nautobot-plugin-/issues/{issue})"

[tool.towncrier.fragment.added]
[tool.towncrier.fragment.changed]
[tool.towncrier.fragment.deprecated]
[tool.towncrier.fragment.fixed]
[tool.towncrier.fragment.removed]
[tool.towncrier.fragment.security]